--- a/style.css
+++ b/style.css
@@ -1498,9 +1498,10 @@ input.button.with-text {
 /*título de container*/
 .action-home-index #content .box-1 .container-block-plugin_container-block .block .block-title, 
 .action-environment_design-index #content .box-1 .container-block-plugin_container-block .block .block-title {
-    padding-left: 10px;
+    padding-left: 13px;
     padding-bottom: 24px;
-/*teste*/  top: 7px; left: -14px;
+    top: 9px;
+    left: -11px;
 }
 /*título do bloco de pessoas dentro do container */
 .action-home-index #content .box-1 .container-block-plugin_container-block .people-block .block-title, 
