--- a/style.css
+++ b/style.css
@@ -1498,10 +1498,9 @@ input.button.with-text {
 /*título de container*/
 .action-home-index #content .box-1 .container-block-plugin_container-block .block .block-title, 
 .action-environment_design-index #content .box-1 .container-block-plugin_container-block .block .block-title {
-    padding-left: 13px;
+    padding-left: 10px;
     padding-bottom: 24px;
-    top: 9px;
-    left: -11px;
+/*teste*/  top: 7px; left: -14px;
 }
 /*título do bloco de pessoas dentro do container */
 .action-home-index #content .box-1 .container-block-plugin_container-block .people-block .block-title, 
@@ -1674,12 +1673,12 @@ input.button.with-text {
 /*blocos comuns dentro do container*/
 .action-home-index .container-block-plugin_container-block .block .block-inner-2,
 .action-environment_design-index .container-block-plugin_container-block .block .block-inner-2{
+    background-color: white;
     padding: 14px;
 }
 
 .action-home-index .container-block-plugin_container-block .block-outer,
 .action-environment_design-index .container-block-plugin_container-block .block-outer{
-    background-color: white;
     margin-left: 0px;
     margin-right: -3px;
 }
