--- a/cabecalho-amarelo-theme.css
+++ b/cabecalho-amarelo-theme.css
@@ -92,7 +92,7 @@ background-color: #fcdd4e;/*(amarelo-claro)*/
 #logo #portal-title {
   margin: 30px 0px 46px 0px;
   color: #03316f;
-  font-size: 4em;
+  font-size: 40px;
   font-family: 'Open Sans Extrabold', Arial, Helvetica, sans-serif;
   font-weight: normal;
   line-height: 1em;
