--- a/style.css
+++ b/style.css
@@ -2041,7 +2041,7 @@ input.button.with-text {
 .people-block .common-profile-list-block img,
 .friends-block .common-profile-list-block img {
 	 margin-bottom: 5px;
-    vertical-align: bottom;
+    vertical-align: top;
 }
 
 .friends-block .common-profile-list-block .profile_link span.fn {
