--- a/style.css
+++ b/style.css
@@ -2047,6 +2047,7 @@ input.button.with-text {
 .action-home-index .people-block .common-profile-list-block img,
 .action-environment_design-index .people-block .common-profile-list-block img {
     vertical-align: middle;
+	 margin-bottom: 0px;
 }
 
 .friends-block .common-profile-list-block .profile_link span.fn {
