--- a/style.css
+++ b/style.css
@@ -2572,4 +2572,68 @@ body.contraste #social-icons #sb_flickr:hover {
 }
 
 
+/*****************************************************/
+/*                  EMBED CSS                        */
+/*****************************************************/
+body.action-embed-index {
+  background-color: #f0f0f0;
+}
+
+#embed {
+  width: 100%;
+  height: 100%;
+  display: table;
+  position: absolute;
+}
+
+.action-embed-index #boxes,
+.action-embed-index .box-1 .blocks,
+.action-embed-index .block-outer, 
+.action-embed-index #content .block {
+  margin: 0px;
+}
+
+.action-embed-index #wrap-1 {
+  display: table-cell;
+  vertical-align: middle;
+  width: 100%;
+  height: 100%;
+}
+
+.action-embed-index #wrap-2 {
+  border: 0px solid #F00;
+  padding: 0px;
+  background-color: #EEE;
+  margin: 0px;
+}
+
+.action-embed-index .block .block-inner-2 {
+  background-color: white;
+  padding: 1em;
+  margin: 0;
+}
+
+.action-embed-index #content .box-1 .block-title {
+  background-color: transparent;
+  border-bottom: 0 solid #AAAAAA;
+  border-top: 0 none;
+  left: -20px;
+  margin-bottom: 0;
+  margin-top: -44px;
+  position: relative;
+}
+
+.action-embed-index #content .box-1 .block-title span {
+    background-color: #497b16;
+    color: white;
+    font-size: 18px;
+    font-variant: normal;
+    padding: 6px 1em;
+    text-align: left;
+}
+
+/******** BLOCK => TRACK CARD LIST *********/
+.action-embed-index .community-track-plugin_track-card-list-block .block-inner-2 {
+  background: url("images/bg-bloco-de-trilhas.png") no-repeat scroll center top transparent;
+}
 
